landing.js local storage

--- a/Assets/muttStyle.css
+++ b/Assets/muttStyle.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(./images/Paw-Background-3.jpg) !important;
+    background-image: url(./images/NEWBG.jpg) !important;
 }
 
 img {
