--- a/Assets/muttStyle.css
+++ b/Assets/muttStyle.css
@@ -1,5 +1,6 @@
 body {
     background-image: url(./images/NEWBG.jpg) !important;
+    background-size: cover;
 }
 
 img {
@@ -45,6 +46,10 @@ height: 60px;
    
 }
 
+.fixed-bottom {
+    z-index: -10 !important;
+}
+
 /* body { */
     /* overflow: hidden; */
 /* } */
@@ -58,8 +63,8 @@ height: 60px;
     height: 50%;
     margin: auto;
     box-shadow: 0px 0px 100px #fff !important;
-    z-index: 5;
-    border: 5px;
+  
+  
 } 
 .carousel-cell {
     width: 100%;
@@ -104,9 +109,20 @@ height: 60px;
     right:30;
   } */
 
-  .modal_content {
+  .modal-content {
       width: auto;
-      
+      background-color: transparent !important;
+  }
+
+  .modal-dialog {
+      background-color: #dcdbdb !important;
+    }
+
+
+  #innerCarousel {
+    margin: 0;
+    width: 100%;
+    
   }
 
   @media (max-width: 767.98px) {
@@ -142,11 +158,7 @@ height: 60px;
         }
  } 
 
- #innerCarousel {
-    margin: 0;
-    width: 100%;
-    
-  }
+
 
 
 
